Revision history for Perl extension Module::Starter

NEXT

        [ENHANCEMENTS]
        Added more exclusions.  Thanks to Olivier Mengué.

        * [RT #24110] Support for Test::CheckManifest + tests for it (Sawyer X)
        * [RT #22648] Pod::Parser (Pod::Usage) >= 1.21 (Sawyer X)
        (earlier version Backpan, tested to work)


1.52    Mon Jul 27 01:25:03 CDT 2009
        * Support for more licenses.  Thanks to Shlomi Fish.

        * Fix slashing problems for Windows.  Thanks Olivier Mengué.

        * Complains about extra unparsed options to try to detect
        problems that come out of misquoted variables. Thanks to Gunnar Wolf.

        * The list of files to ignore is now called ignore.txt,
        which you can turn into .cvsignore, .gitignore, MANIFEST.SKIP
        or whatever.

        * Handles authors with apostrophes in their names better.
        Thanks to, not surprisingly, Dave O'Neill.

        * Removed module requirements on Test::Pod and Test::Pod::Coverage
        for Module::Starter to be built and installed.  However,
        t/pod.t and t/pod-coverage.t do still both get created even
        if either of their two main modules are not installed.


1.50    Tue Oct 28 00:27:37 CDT 2008
        * Added Perl Training Australia's getting-started.html

        * Add license setting to default Makefile.PL output (Thanks, Gabor!)

        * Fixed the RT link in the boilerplate. (Thanks, Shlomi)


1.46    Fri Nov  9 18:36 America/New_York 2007
        [ENHANCEMENTS]
        * add Module::Install compat for ::Template plugin
        * boilerplate.t no longer appears in default MANIFEST
        * META.yml no longer appears in default MANIFEST

        [FIXES]
        * undo some bugs introduced by changing API of subclassable "guts"
          methods
        * remove some duplicated code

1.46    Wed Oct 31 08:49 America/New_York 2007
        * put nearly all of the module-starter program into a module (to test)