@@ -5,6 +5,7 @@ NEXT
         [ENHANCEMENTS]
         Added more exclusions.  Thanks to Olivier Mengué.
 
+        * [RT #13847] Bail out if load fail, addming minimum Test::Harness
         * [RT #24110] Support for Test::CheckManifest + tests for it (Sawyer X)
         * [RT #22648] Pod::Parser (Pod::Usage) >= 1.21 (Sawyer X)
         (earlier version Backpan, tested to work)
